# HFcpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: 3-21G.d2k  CLI11.hpp  basis.cpp  basis.hpp  boys.hpp  cc-pVQZ-DK.d2k  integration.hpp  io.hpp  main.cpp  scf.cpp  scf.hpp  util.cpp  util.hpp  water.xyz
